--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=FAMILY_NAME:wght@WEIGHT_OR_RANGE&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+</head>
 
 <body>
   <header>
@@ -23,8 +23,6 @@
 
 
       <nav>
-
-        <!---<h1>Hi, <span style="color: #30d3d3; font-family: courier, monospace; ">Sayad Muhammad</span> here!</h1>--->
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#about">About Me</a></li>
@@ -43,7 +41,7 @@
           <h2><em>"It's not who I am underneath, but what I do that defines me."</em></h2>
           <h3>- Bruce Wayne (The Batman)</h3>
         </div>
-        <img src="images/giphy (1).gif">
+        <img src="images/giphy (2).gif">
       </div>
       
 
@@ -236,18 +234,8 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
   </footer>
 
 
-
-
-
-
-  
-  
-
   
   
 </body>
 
 </html>
-
-
-
